fixing up old name

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PhoDefense - AI-Powered Krav Maga Training</title>
+    <title>Kravity- Gamifying Self Defense with Augmented Reality Technology</title>
     <meta name="description" content="Master Krav Maga with AI-powered pose detection. Train like a warrior, defend with precision in solo or multiplayer combat training." />
     <meta name="author" content="PhoDefense Team" />
     <meta name="keywords" content="krav maga, self defense, AI training, pose detection, martial arts, combat training" />
